@@ -169,6 +169,7 @@ Version 2.3.0 - The river knows.
 		* MANY fixes/implementations for amulegui
 		* Fix a small memory leak in Kademlia code
 		* Fix occasionally sending junk at end of packets
+		* Fix child items in search result getting inserted in wrong positions
 
 	Vollstrecker:
 		* Unify copyright lines
